# munge-bash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.cpp.bak  munge.sh  pc_munge.sh  utils.sh
Common/: clean.sh  merge_localize.sh  munge.sh  munge_fpm.sh  munge_sprites.sh
Shell/: clean.sh  munge.sh
Sides/: clean.sh  munge.sh  munge_fpm.sh  munge_side.sh
Sides/ALL/: clean.sh  munge.sh
Worlds/: clean.sh  munge.sh  munge_world.sh
src/: BF2Path.cpp  BF2Path.h  main.cpp
